--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,26 @@
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:1.0.0'
-    }
+
+plugins {
+    id 'com.android.application' version '8.2.2'
 }
-apply plugin: 'android'
+
+
+
+
 
 android {
-    compileSdkVersion 'android-23'
-    buildToolsVersion '23.0.1'
+    namespace 'org.vi_server.red_screen'
+    compileSdk 34
+
+    defaultConfig {
+        applicationId "org.vi_server.red_screen"
+        minSdk 16
+        targetSdk 34
+        versionCode 2
+        versionName "1.2"
+    }
+    buildTypes {
+        release {
+            minifyEnabled false
+        }
+    }
 }
