--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="org.vi_server.red_screen"
-      android:versionCode="2"
-      android:versionName="1.1">
+    android:versionCode="2"
+    android:versionName="1.2">
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
-        <activity android:name="RedScreenActivity"
-                  android:showOnLockScreen="true"
-                  android:screenOrientation="portrait"
-                  android:label="@string/app_name">
+    <activity android:name="RedScreenActivity"
+          android:showOnLockScreen="true"
+          android:screenOrientation="portrait"
+          android:label="@string/app_name"
+          android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
