--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <meta-data android:name="android.app.shortcuts"
+                   android:resource="@xml/shortcuts" /> 
         </activity>
     </application>
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
